--- a/china.html
+++ b/china.html
@@ -73,7 +73,7 @@
   <span class="xr_tl xr_s6" style="top: 102px;">than one-third of the U.S. population in 2000). The Chinese constantly </span>
   <span class="xr_tl xr_s6" style="top: 133px;">had to adapt new eating habits because of the scarcity of food. Meat </span>
   <span class="xr_tl xr_s6" style="top: 164px;">was scarce, so dishes were created using small amounts of meat </span>
-  <span class="xr_tl xr_s6" style="top: 195px;">mixed with rice or noodles, both of which were more plentiful. </span>
+  <span class="xr_tl xr_s6" style="top: 195px;">mixed with rice or noodle, both of which were more plentiful. </span>
   <span class="xr_tl xr_s6" style="top: 226px;">Vegetables were added, and stir-frying, the most common method of </span>
   <span class="xr_tl xr_s6" style="top: 256px;">cooking, became a way to conserve fuel by cooking food quickly.</span>
   <span class="xr_tl xr_s6" style="top: 318px;">Regional differences in cuisine became noticeable in the 1200s when </span>
