--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
  <div class="Heading_3" style="position: absolute; left:116px; top:721px;">
   <h3 class="xr_tl Heading_3" style="top: -21px;margin:0;"><a href="vietnam.html" onclick="return(xr_nn());" onmousemove="xr_mo(this,0)" ><span class="Heading_3" style="text-decoration:underline;">VIETNAM</span></a></h3>
  </div>
- <img class="xr_rn_ xr_ap" src="index_html_files/1302.png" alt="LET TRAVEL!!!!!" title="" style="left: 117px; top: 664px; width: 143px; height: 23px;"/>
+ <img class="xr_rn_ xr_ap" src="index_html_files/1620.png" alt="LET&#8217;S TRAVEL!!!!!" title="" style="left: 117px; top: 664px; width: 159px; height: 23px;"/>
  <div class="Heading_3" style="position: absolute; left:637px; top:721px;">
   <h3 class="xr_tl Heading_3" style="top: -21px;margin:0;"><a href="china.html" onclick="return(xr_nn());" onmousemove="xr_mo(this,0)" ><span class="Heading_3" style="text-decoration:underline;">CHINA</span></a></h3>
  </div>
