--- a/task.html
+++ b/task.html
@@ -83,7 +83,7 @@
   <span class="xr_tl xr_s13" style="top: 54px;font-family:Times New Roman;"><span class="xr_s15" style="">steps on the Worksheet 1.</span></span>
   <span class="xr_tl xr_s13" style="top: 100px;font-family:Times New Roman;"><span class="xr_s15" style="">You can search more information on the Internet.</span></span>
   <span class="xr_tl xr_s13" style="left: 29px; top: 145px;font-family:Times New Roman;"><span class="xr_s16" style="">&#61623;</span></span>
-  <span class="xr_tl xr_s13" style="left: 58px; top: 148px;font-family:Times New Roman;"><a href="index_html_files/Menu-planning-writing-lesson.pdf" onclick="return(xr_nn());" onmousemove="xr_mo(this,0)" ><span class="xr_s15" style="text-decoration:underline;">Pdf lesson</span></a><span class="xr_s15" style="">&nbsp;(link de down)</span></span>
+  <span class="xr_tl xr_s13" style="left: 58px; top: 148px;font-family:Times New Roman;"><a href="index_html_files/Menu-planning-writing-lesson.pdf" onclick="return(xr_nn());" onmousemove="xr_mo(this,0)" ><span class="xr_s15" style="text-decoration:underline;">Lesson</span></a></span>
   <span class="xr_tl xr_s13" style="left: 29px; top: 193px;font-family:Times New Roman;"><span class="xr_s16" style="">&#61623;</span></span>
   <span class="xr_tl xr_s13" style="left: 58px; top: 196px;font-family:Times New Roman;"><a href="index_html_files/Worksheet-1.pdf" onclick="return(xr_nn());" onmousemove="xr_mo(this,0)" ><span class="xr_s15" style="text-decoration:underline;">Worksheet 1</span></a></span>
   <span class="xr_tl xr_s13" style="top: 242px;font-family:Times New Roman;"><span class="xr_s14" style="">Task 2: Asian food </span></span>
@@ -96,8 +96,10 @@
   <span class="xr_tl xr_s13" style="top: 517px;font-family:Times New Roman;"><span class="xr_s14" style="">Final Task: Create a menu </span></span>
   <span class="xr_tl xr_s15" style="top: 563px;">Based on the knowledge that you have leant and searched, CREATE your group&#8217;s </span>
   <span class="xr_tl xr_s15" style="top: 592px;">menu.</span>
-  <span class="xr_tl xr_s15" style="top: 637px;"><a href="index_html_files/menu.jpg" onclick="return(xr_nn());" onmousemove="xr_mo(this,0)" ><span class="xr_s15" style="text-decoration:underline;">Model menu1</span></a></span>
-  <span class="xr_tl xr_s15" style="top: 683px;"><a href="index_html_files/menu2.jpg" onclick="return(xr_nn());" onmousemove="xr_mo(this,0)" ><span class="xr_s15" style="text-decoration:underline;">Model menu2</span></a></span>
+  <span class="xr_tl xr_s16" style="left: 14px; top: 637px;font-family:Times New Roman;"><a href="index_html_files/menu.jpg" onclick="return(xr_nn());" onmousemove="xr_mo(this,0)" ><span class="xr_s17" style="text-decoration:underline;">&#8226;</span></a></span>
+  <span class="xr_tl xr_s17" style="left: 38px; top: 637px;font-family:Times New Roman;"><a href="index_html_files/menu.jpg" onclick="return(xr_nn());" onmousemove="xr_mo(this,0)" ><span class="xr_s15" style="text-decoration:underline;">Model menu1</span></a></span>
+  <span class="xr_tl xr_s17" style="left: 14px; top: 683px;font-family:Times New Roman;"><a href="index_html_files/menu2.jpg" onclick="return(xr_nn());" onmousemove="xr_mo(this,0)" ><span class="xr_s17" style="text-decoration:underline;">&#8226;</span></a></span>
+  <span class="xr_tl xr_s17" style="left: 38px; top: 683px;font-family:Times New Roman;"><a href="index_html_files/menu2.jpg" onclick="return(xr_nn());" onmousemove="xr_mo(this,0)" ><span class="xr_s15" style="text-decoration:underline;">Model menu2</span></a></span>
  </div>
  <img class="xr_rn_ xr_ap" src="index_html_files/1225.png" alt="TASK" title="" style="left: 872px; top: 720px; width: 225px; height: 54px;"/>
  <div id="xr_xo0" class="xr_ap" style="left:0; top:0; width:1200px; height:100px; visibility:hidden;">
