--- a/vietnam.html
+++ b/vietnam.html
@@ -91,9 +91,9 @@
  <img class="xr_rn_ xr_ap" src="index_html_files/1312.png" alt="" title="" style="left: 300px; top: 2289px; width: 2px; height: 2px;"/>
  <img class="xr_rn_ xr_ap" src="index_html_files/1317.png" alt="" title="" style="left: 104px; top: 1432px; width: 995px; height: 964px;"/>
  <div class="xr_s6" style="position: absolute; left:180px; top:2229px;">
-  <span class="xr_tl xr_s6" style="top: -22px;"><span id="Panel:32text2"></span>Pho consists of flat rice noodles, meat-based broth. The dish is usually </span>
+  <span class="xr_tl xr_s6" style="top: -22px;"><span id="Panel:32text2"></span>Pho consists of flat rice noodle, meat-based broth. The dish is usually </span>
   <span class="xr_tl xr_s6" style="top: 9px;">accompanied by basil, lime, chili, and other extras on the side so that </span>
-  <span class="xr_tl xr_s6" style="top: 40px;">eaters can season the soup to their own taste. The balanced tastes of </span>
+  <span class="xr_tl xr_s6" style="top: 40px;">eaters can season the soup to their own taste. The balanced taste of </span>
   <span class="xr_tl xr_s6" style="top: 71px;">sweet, salty, spicy, and citrus are highly contagious; Pho usually </span>
   <span class="xr_tl xr_s6" style="top: 102px;">becomes an instant favorite for anyone visiting Vietnam.</span>
  </div>
@@ -102,8 +102,8 @@
   <span class="xr_tl xr_s6" style="top: 14px;">No matter what time day or night, a steaming bowl of Pho noodle soup is </span>
   <span class="xr_tl xr_s6" style="top: 45px;">never hard to find in Vietnam. Just as Pad Thai in Thailand, this dish in </span>
   <span class="xr_tl xr_s6" style="top: 76px;">Vietnam is one of best delicious Vietnamese Food Pho in this country. </span>
-  <span class="xr_tl xr_s6" style="top: 107px;">And everyone around the world always wants eating Pho when they </span>
-  <span class="xr_tl xr_s6" style="top: 138px;">have a chance to go to Vietnam.</span>
+  <span class="xr_tl xr_s6" style="top: 107px;">And everyone around the world always wants to eat Pho when they have </span>
+  <span class="xr_tl xr_s6" style="top: 138px;">a chance to go to Vietnam.</span>
  </div>
  <img class="xr_rn_ xr_ap" src="index_html_files/1318.png" alt="" title="" style="left: 104px; top: 2427px; width: 993px; height: 1019px;"/>
  <div class="xr_s6" style="position: absolute; left:179px; top:3224px;">
@@ -128,9 +128,9 @@
   <span class="xr_tl xr_s6" style="top: -22px;">This cake was invented by the 18th Prince of Hung Emperor in the </span>
   <span class="xr_tl xr_s6" style="top: 9px;">contest of looking for new Emperor. According to the legend, 3,000-</span>
   <span class="xr_tl xr_s6" style="top: 40px;">4,000 years ago, Prince Lang Lieu, made round and square cakes, the </span>
-  <span class="xr_tl xr_s6" style="top: 71px;">round Day cake symbolizing the sky and the Square cake symbolizing </span>
-  <span class="xr_tl xr_s6" style="top: 102px;">the Earth (under the ancient Vietnamese perception), to be offered on </span>
-  <span class="xr_tl xr_s6" style="top: 132px;">the occasion of Spring.</span>
+  <span class="xr_tl xr_s6" style="top: 71px;">Round cake&nbsp; (banh Day) symbolizing the sky and the Square cake </span>
+  <span class="xr_tl xr_s6" style="top: 102px;">symbolizing the Earth (under the ancient Vietnamese perception), to be </span>
+  <span class="xr_tl xr_s6" style="top: 132px;">offered on the occasion of Spring.</span>
   <span class="xr_tl xr_s6" style="top: 163px;">In the ancient conception, the Earth is square; hence this cake's shape </span>
   <span class="xr_tl xr_s6" style="top: 194px;">is square, too, to reflect the Earth shape. Since the cakes he offered </span>
   <span class="xr_tl xr_s6" style="top: 225px;">were of special meaning and delicious taste, Lang Lieu was selected to </span>
